Updated backgrounds to work on mobile for each page; fixed bio to reflect new changes

--- a/src/CSS/about.css
+++ b/src/CSS/about.css
@@ -26,8 +26,8 @@ html {
   align-items: center;
 
   background: rgba(255, 255, 255, 0.1);
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
 
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
