--- a/src/CSS/contacts.css
+++ b/src/CSS/contacts.css
@@ -29,7 +29,7 @@ body {
   align-items: center;
 
   background: rgba(255, 255, 255, 0.1);
-  -webkit-backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(10px);
 
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
